# Order-Processing-Pipeline

./: .dockerignore  .gitignore  AP2_INTEGRATION_SUMMARY.md  ARCHITECTURE.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.migrator  IMPLEMENTATION_SUMMARY.md  Makefile  ORDER_STATUS_TRACKING.md  PAYMENT_RETRY_FLOW.md  README.md  TEST_DATABASE.md  TEST_ORDER_TRACKING.md  TEST_PAYMENT_RETRY.md  config.hcl  database.go  docker-compose.yml  fix_database.sql  go.mod  go.sum  main.go  mcp-config.json  order.proto  setup_database.sql  start_services.sh  test_ap2_execute_fix.py  test_ap2_integration.py  test_ap2_manual.sql  test_complete_flow.sh  test_mcp_checkout.py  test_mcp_integration.py  test_otel_integration.sh  test_status_tracking.sh
.github/workflows/: cd.yml  ci.yml
.gocache/: trim.txt
.gocache/01/: 011c0e0dd11ba7291e1bf8aa983d1e9d1ddb9980ed0528d72e2979e1627caee5-a
api/: buf.gen.yaml  buf.yaml  common.proto  merchant.proto  order-pipeline.proto  order_service.proto  payment_service.proto  shipping_service.proto
docs/: AP2_INTEGRATION.md  ARCHITECTURE.md  DATABASE_SETUP.md  IMPLEMENTATION_SUMMARY.md  ORDER_STATUS_TRACKING.md  PAYMENT_RETRY_FLOW.md  TEST_DATABASE.md  TEST_ORDER_TRACKING.md  XENDIT_WEBHOOK_SETUP.md  authz.md
mcp-server/: main.py  manifest.json  mcpserver.py  pyproject.toml
orderspb/: order.pb.go
policy/: authz.fga
scripts/: bootstrap_openbao.sh  init_openbao_docker.sh  seed_openfga.sh  setup_database.sql  setup_ngrok.sh  setup_openfga_postgres.sh  unseal_openbao.sh
web/: app.js  index.html  style.css
(+332 files in other folders)
